--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,5 +13,8 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Imports: 
+    dplyr,
+    ggplot2,
     mrgsolve,
-    vpc
+    vpc,
+    withr
