--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,17 +2,16 @@ Package: pmxhelpr
 Title: Helper Functions for Pharmacometrics
 Version: 0.0.0.9000
 Authors@R: 
-    person("Ryan", "Crass", "ryancrass@gmail.com", role = c("aut", "cre"),
+    person(c("Ryan", "Crass"), "ryancrass@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-5403-4730"))
 Description: Wrapper functions for 'mrgsolve' and 'vpc' package functions
-    and other general helpers to make pharmacometics workflows more seamless.
+    and other general helpers to make pharmacometics workflows more
+    seamless.
 License: MIT + file LICENSE
-Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.2
-Suggests: 
-    testthat (>= 3.0.0)
-Config/testthat/edition: 3
+URL: https://github.com/ryancrass/pmxhelpr
+BugReports: https://github.com/ryancrass/pmxhelpr/issues
+Depends: 
+    R (>= 2.10)
 Imports: 
     dplyr,
     ggplot2,
@@ -21,8 +20,10 @@ Imports:
     stats,
     vpc,
     withr
-Depends: 
-    R (>= 2.10)
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+Encoding: UTF-8
 LazyData: true
-URL: https://github.com/ryancrass/pmxhelpr
-BugReports: https://github.com/ryancrass/pmxhelpr/issues
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.3.2
