--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: pmxhelpr
 Title: Helper Functions for Pharmacometrics
 Version: 0.0.0.9000
 Authors@R: 
-    person(c("Ryan", "Crass"), "ryancrass@gmail.com", role = c("aut", "cre"),
+    person(c(given="Ryan", family="Crass", middle="L"), "ryancrass@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-5403-4730"))
 Description: Wrapper functions for 'mrgsolve' and 'vpc' package functions
     and other general helpers to make pharmacometics workflows more
