Update name of primary plotting function from vpc_plot_databins to vpc_plot_exactbins

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,5 @@ export(df_calc_predcorr)
 export(model_load)
 export(mrgsim_vpc)
 export(nobs_bin)
-export(vpc_plot_databins)
+export(vpc_plot_exactbins)
 importFrom(rlang,":=")
