--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,9 +23,12 @@ Imports:
     vpc,
     withr
 Suggests: 
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+VignetteBuilder: knitr
