--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Description: Wrapper functions for 'mrgsolve' and 'vpc' package functions
     and other general helpers to make pharmacometics workflows more
     seamless.
 License: GPL-3 + file LICENSE
-URL: https://github.com/ryancrass/pmxhelpr
+URL: https://github.com/ryancrass/pmxhelpr, https://ryancrass.github.io/pmxhelpr/
 BugReports: https://github.com/ryancrass/pmxhelpr/issues
 Depends: 
     R (>= 2.10)
