--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R:
     role = c("aut", "cre", "cph"),
     comment = c(ORCID = "0000-0001-5403-4730"))
 Description: Wrapper functions for 'mrgsolve' and 'vpc' package functions
-    and other general helpers to make pharmacometics workflows more
+    and other general helpers to make pharmacometrics workflows more
     seamless.
 License: GPL-3 + file LICENSE
 URL: https://github.com/ryancrass/pmxhelpr, https://ryancrass.github.io/pmxhelpr/
