Create plot_vpc_legend to create legends for vpc plots, which can be added via patchwork or printed out separately.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,5 @@ export(df_nobsbin)
 export(df_pcdv)
 export(model_mread_load)
 export(plot_vpc_exactbins)
+export(plot_vpc_legend)
 importFrom(rlang,":=")
