--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: pmxhelpr
 Title: Helper Functions for Pharmacometrics
-Version: 0.1.0
+Version: 0.1.0.9000
 Authors@R: 
     person(given="Ryan", family="Crass",
     email = "ryancrass@gmail.com", 
@@ -25,8 +25,8 @@ Imports:
 Suggests: 
     knitr,
     rmarkdown,
-    patchwork,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    patchwork
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
