Update plot_dvtime function to pass R CMD check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(df_mrgsim_replicate)
 export(df_nobsbin)
 export(df_pcdv)
 export(model_mread_load)
+export(plot_dvtime)
 export(plot_legend)
 export(plot_vpc_exactbins)
 importFrom(rlang,":=")
