--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,8 @@ Suggests:
     knitr,
     rmarkdown,
     testthat (>= 3.0.0),
-    patchwork
+    patchwork,
+    Hmisc
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
