--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,8 @@ Suggests:
     rmarkdown,
     testthat (>= 3.0.0),
     patchwork,
-    Hmisc
+    Hmisc,
+    PKNCA
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
