--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,11 @@
 
 export(breaks_time)
 export(df_addpred)
+export(df_loglog)
 export(df_mrgsim_replicate)
 export(df_nobsbin)
 export(df_pcdv)
+export(mod_loglog)
 export(model_mread_load)
 export(plot_dvtime)
 export(plot_legend)
