Add NCA dataset derived from data_sad to internal library (data_sad_nca)
Add df_doseprop function to derive data frames of log-log dose-proportionality assessments

Add plot_doseprop function to plot log-log dose-proportionality assessments

Add tick marks for log10 axes to plot_dvtime

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,14 @@
 
 export(breaks_time)
 export(df_addpred)
+export(df_doseprop)
 export(df_loglog)
 export(df_mrgsim_replicate)
 export(df_nobsbin)
 export(df_pcdv)
 export(mod_loglog)
 export(model_mread_load)
+export(plot_doseprop)
 export(plot_dvtime)
 export(plot_legend)
 export(plot_vpc_exactbins)
