Revise default aesthetics for plotting functions. Move caption for plot_dvtime to helper function (dvtime_caption). Move new default VPC theme to helper function (pmxhelpr_vpc_theme). Update vignettes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,10 +7,12 @@ export(df_loglog)
 export(df_mrgsim_replicate)
 export(df_nobsbin)
 export(df_pcdv)
+export(dvtime_caption)
 export(mod_loglog)
 export(model_mread_load)
 export(plot_doseprop)
 export(plot_dvtime)
 export(plot_legend)
 export(plot_vpc_exactbins)
+export(pmxhelpr_vpc_theme)
 importFrom(rlang,":=")
