Add new functionality for generating population GOF plots with `plot_popgof`. Created `data_sad_pkfit` to facilitate examples.
Moved `breaks_time` to its own .R script

Updated some argument and dataset documentation.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(model_mread_load)
 export(plot_doseprop)
 export(plot_dvtime)
 export(plot_legend)
+export(plot_popgof)
 export(plot_vpc_exactbins)
 export(pmxhelpr_vpc_theme)
 importFrom(rlang,":=")
