Revise `plot_legend` to `plot_vpclegend` for clarity given multiple types of plotting functions with EDA functionality added to initial VPC functionality

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,8 @@ export(mod_loglog)
 export(model_mread_load)
 export(plot_doseprop)
 export(plot_dvtime)
-export(plot_legend)
 export(plot_popgof)
 export(plot_vpc_exactbins)
+export(plot_vpclegend)
 export(pmxhelpr_vpc_theme)
 importFrom(rlang,":=")
