--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -2,9 +2,8 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    branches: [main, master]
+    branches: main
   pull_request:
-    branches: [main, master]
 
 name: R-CMD-check.yaml
 
@@ -20,11 +19,10 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - {os: macos-latest,   r: 'release'}
-          - {os: windows-latest, r: 'release'}
-          - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
-          - {os: ubuntu-latest,   r: 'release'}
-          - {os: ubuntu-latest,   r: 'oldrel-1'}
+          - {os: macos-latest,   r: '4.5'}
+          - {os: windows-latest, r: '4.5'}
+          - {os: ubuntu-latest,   r: '4.5'}
+          - {os: ubuntu-latest,   r: '4.4'}
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
@@ -38,13 +36,51 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.config.r }}
-          http-user-agent: ${{ matrix.config.http-user-agent }}
           use-public-rspm: true
+      - uses: a2-ai/setup-rv@main
 
-      - uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          extra-packages: any::rcmdcheck
-          needs: check
+      - name: replace-rversion
+        run: |
+          perl -i -pe 's|^r_version = "4\.[0-9\.]+"$|r_version = "${{ matrix.config.r }}"|' rproject.toml
+          cat rproject.toml
+        if: runner.os != 'Windows'
+
+      - name: replace-rversion (Windows)
+        run: |
+          $rVersion = "${{ matrix.config.r }}"
+          (Get-Content rproject.toml) -replace '^r_version = "4\.[0-9\.]+"$', "r_version = `"$rVersion`"" | Set-Content rproject.toml
+          Get-Content rproject.toml
+        shell: pwsh
+        if: runner.os == 'Windows'
+
+      - name: rv-plan
+        run: rv plan
+        if: runner.os != 'Windows'
+
+      - name: rv-plan (Windows)
+        run: rv.exe plan
+        shell: cmd
+        if: runner.os == 'Windows'
+      - name: rv-sysdeps-install (Linux)
+        if: runner.os == 'Linux'
+        run: |
+          MISSING_DEPS=$(rv plan --json | jq -r '.installed[].sys_deps[]? | select(.status == "absent") | .name')
+          if [ -n "$MISSING_DEPS" ]; then
+            echo "Found missing system dependencies:"
+            echo "$MISSING_DEPS"
+            echo "Installing..."
+            echo "$MISSING_DEPS" | xargs sudo apt install
+          else
+            echo "All system dependencies are present"
+          fi
+      - name: rv-sync
+        run: rv sync
+        if: runner.os != 'Windows'
+
+      - name: rv-sync (Windows)
+        run: rv.exe sync
+        shell: cmd
+        if: runner.os == 'Windows'
 
       - uses: r-lib/actions/check-r-package@v2
         with:
