Add named list option to control plot aesthetic elements borrowing the approach used for the vpc functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(mod_loglog)
 export(model_mread_load)
 export(plot_doseprop)
 export(plot_dvtime)
+export(plot_dvtime_theme)
 export(plot_popgof)
 export(plot_vpc_exactbins)
 export(plot_vpclegend)
